--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mantine/core": "^7.2.1",
     "@mantine/hooks": "^7.2.1",
     "@tabler/icons-react": "^2.40.0",
+    "axios": "^1.6.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
